--- a/portfolio.html
+++ b/portfolio.html
@@ -5,93 +5,101 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
+    <link rel = " stylesheet " href = "./css/styles.css"/>
+
 </head>
 <body>
-    <header>
-        <nav>
-            <a href="/"><span>Web</span>Studio</a>
-            <ul>
-              <li><a href="">Студия</a></li>
-              <li><a href="">Портфолио</a></li>
-              <li><a href="">Контакты</a></li>
-            </ul>
-        </nav>
+  <header class="page-header">
+    <nav>
+        <a href="./index.html" class="logo">Web<span class="logo-second">Studio</span></a>
 
-        <ul>
-          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          <li><a href="tel:+380961111111">+380961111111</a></li>
+        <ul class="site-nav list">
+          <li><a href="./index.html" class="link-current">Студия</a></li>
+          <li><a href="./portfolio.html" class="link">Портфолио</a></li>
+          <li><a href="" class="link">Контакты</a></li>
         </ul>
-    </header>
+    </nav>
 
-    <main>
-        <ul>
-            <li><button type="button">Все</button></li>
-            <li><button type="button">Веб-сайты</button></li>
-            <li><button type="button">Приложения</button></li>
-            <li><button type="button">Дизайн</button></li>
-            <li><button type="button">Маркетинг</button></li>
-        </ul>
+    <ul class="auth-nav list">
+      <li><a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a></li>
+      <li><a href="tel:+380961111111" class="link">+380961111111</a></li>
+    </ul>
+</header>
 
-        <ul>
+    <main class="main-portfolio">
+      <section class="filters">
+        <ul class="filters-button list">
+            <li><button class="button" type="button">Все</button></li>
+            <li><button class="button" type="button">Веб-сайты</button></li>
+            <li><button class="button" type="button">Приложения</button></li>
+            <li><button class="button" type="button">Дизайн</button></li>
+            <li><button class="button" type="button">Маркетинг</button></li>
+        </ul>  
+      </section>
+        
+      <section class="project">
+        <ul class="project-list list">
           <li> <img src="./images/portf(1).jpg" alt="веб-страница нашей команды" width="370"/>
-            <h3>Технокряк</h3>
-            <p>Веб-сайт</p>
+            <h3 class="title">Технокряк</h3>
+            <p class="project-text">Веб-сайт</p>
           </li>
 
           <li> <img src="./images/portf(2).jpg" alt="спортсмены играют в баскетбол" width="370"/>
-            <h3>Постер New Orlean vs Golden Star</h3>
-            <p>Дизайн</p>
+            <h3 class="title">Постер New Orlean vs Golden Star</h3>
+            <p class="project-text">Дизайн</p>
           </li>
 
           <li> <img src="./images/portf(3).jpg" alt="постер рыбного ресторана" width="370"/>
-            <h3>Ресторан Seafood</h3>
-            <p>Приложение</p>
+            <h3 class="title">Ресторан Seafood</h3>
+            <p class="project-text">Приложение</p>
           </li>
 
           <li> <img src="./images/portf(4).jpg" alt="наушники" width="370"/>
-            <h3>Проект Prime</h3>
-            <p>Маркетинг</p>
+            <h3 class="title">Проект Prime</h3>
+            <p class="project-text">Маркетинг</p>
           </li>
 
           <li> <img src="./images/portf(5).jpg" alt="коробки" width="370"/>
-            <h3>Проект Boxes</h3>
-            <p>Приложение</p>
+            <h3 class="title">Проект Boxes</h3>
+            <p class="project-text">Приложение</p>
           </li>
 
           <li> <img src="./images/portf(6).jpg" alt="монитор" width="370"/>
-            <h3>Inspiration has no Borders</h3>
-            <p>Веб-сайт</p>
+            <h3 class="title">Inspiration has no Borders</h3>
+            <p class="project-text">Веб-сайт</p>
           </li>
 
           <li> <img src="./images/portf(7).jpg" alt="журнал" width="370"/>
-            <h3>Издание Limited Edition</h3>
-            <p>Дизайн</p>
+            <h3 class="title">Издание Limited Edition</h3>
+            <p class="project-text">Дизайн</p>
           </li>
 
           <li> <img src="./images/portf(8).jpg" alt="бирка" width="370"/>
-            <h3>Проект LAB</h3>
-            <p>Маркетинг</p>
+            <h3 class="title">Проект LAB</h3>
+            <p class="project-text">Маркетинг</p>
           </li>
 
           <li> <img src="./images/portf(9).jpg" alt="ноутбук" width="370"/>
-            <h3>Growing Business</h3>
-            <p>Приложение</p>
+            <h3 class="title">Growing Business</h3>
+            <p class="project-text">Приложение</p>
           </li>
-
         </ul>
-
+      </section>
     </main>
 
-    <footer>
-        <a href="/"><span>Web</span>Studio</a>
-      <address>
-        <ul>
-          <li><a href="https://goo.gl/maps/e43DtXqg6QMjjRxM7">г. Киев, пр-т Леси Украинки, 26</a></li>
-          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          <li><a href="tel:+380961111111">+380961111111</a></li>
-        </ul>
-      </address>
-      </footer>
+    <footer class="page-footer">
+      <a href="./index.html" class="logo">Web<span class="logo-f">Studio</span></a>
+    <address>
+      <ul class="address list">
+        <li><a href="https://goo.gl/maps/e43DtXqg6QMjjRxM7" class="link-t">г. Киев, пр-т Леси Украинки, 26</a></li>
+        <li><a href="mailto:info@devstudio.com" class="link-f">info@devstudio.com</a></li>
+        <li><a href="tel:+380961111111" class="link-f">+380961111111</a></li>
+      </ul>
+    </address>
+    </footer>
 
     
 </body>
