--- a/portfolio.html
+++ b/portfolio.html
@@ -17,11 +17,11 @@
         <a href="./index.html" class="logo">Web<span class="logo-second">Studio</span></a>
 
         <ul class="site-nav list">
-          <li><a href="./index.html" class="link-current">Студия</a></li>
-          <li><a href="./portfolio.html" class="link">Портфолио</a></li>
+          <li><a href="./index.html" class="link">Студия</a></li>
+          <li><a href="./portfolio.html" class="link active">Портфолио</a></li>
           <li><a href="" class="link">Контакты</a></li>
         </ul>
-    </nav>
+    </nav> 
 
     <ul class="auth-nav list">
       <li><a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a></li>
@@ -29,18 +29,17 @@
     </ul>
 </header>
 
-    <main class="main-portfolio">
-      <section class="filters">
-        <ul class="filters-button list">
+    <main>
+      <section class="portfolio">
+      <h1 class="portfolio-title">portfolio</h1>
+        <ul class="filters-list list">
             <li><button class="button" type="button">Все</button></li>
             <li><button class="button" type="button">Веб-сайты</button></li>
             <li><button class="button" type="button">Приложения</button></li>
             <li><button class="button" type="button">Дизайн</button></li>
             <li><button class="button" type="button">Маркетинг</button></li>
         </ul>  
-      </section>
         
-      <section class="project">
         <ul class="project-list list">
           <li> <img src="./images/portf(1).jpg" alt="веб-страница нашей команды" width="370"/>
             <h3 class="title">Технокряк</h3>
